--- a/src/main/resources/view/cadastro.fxml
+++ b/src/main/resources/view/cadastro.fxml
@@ -79,7 +79,7 @@
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                <children>
                   <ChoiceBox fx:id="escolhaUsuario" prefWidth="150.0" />
-                  <Button mnemonicParsing="false" text="Cadastrar" />
+                  <Button mnemonicParsing="false" onAction="#cadastro" text="Cadastrar" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
