--- a/src/main/resources/view/ProfessorDashboardView.fxml
+++ b/src/main/resources/view/ProfessorDashboardView.fxml
@@ -30,7 +30,7 @@
             <children>
                 <HBox spacing="20.0">
                     <children>
-                        <Button fx:id="provaButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="130.0" text="Provas" />
+                        <Button fx:id="provaButton" mnemonicParsing="false" onAction="#handelGerenciarProvas" prefHeight="45.0" prefWidth="130.0" text="Provas" />
                         <Button fx:id="notasButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="130.0" text="Consultar Notas" />
                     </children>
                 </HBox>
