--- a/src/main/resources/view/GerenciarProvasView.fxml
+++ b/src/main/resources/view/GerenciarProvasView.fxml
@@ -37,7 +37,7 @@
             </children>
         </VBox>
 
-        <Button fx:id="novoButton" layoutX="125.0" layoutY="395.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Novo" />
+        <Button fx:id="novoButton" layoutX="125.0" layoutY="395.0" mnemonicParsing="false" onAction="#handleNovaProva" prefHeight="30.0" prefWidth="80.0" text="Novo" />
         <Button fx:id="editarButton" layoutX="413.0" layoutY="395.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Editar" />
         <Button fx:id="excluirButton" layoutX="501.0" layoutY="395.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Excluir" />
       <Button fx:id="novoButton1" layoutX="224.0" layoutY="395.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Enviar" />
