--- a/src/main/resources/view/GerenciarQuestoesView.fxml
+++ b/src/main/resources/view/GerenciarQuestoesView.fxml
@@ -26,9 +26,9 @@
 
         <VBox alignment="CENTER" layoutX="24.0" layoutY="145.0" spacing="10.0" />
 
-        <Button fx:id="novoButton" layoutX="30.0" layoutY="395.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Adicionar" />
-        <Button fx:id="editarButton" layoutX="436.0" layoutY="395.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Editar" />
+        <Button fx:id="novoButton" layoutX="30.0" layoutY="395.0" mnemonicParsing="false" onAction="#handleAdicionarQuestao" prefHeight="30.0" prefWidth="80.0" text="Adicionar" />
+        <Button fx:id="editarButton" layoutX="436.0" layoutY="395.0" mnemonicParsing="false" onAction="#handleEditarQuestao" prefHeight="30.0" prefWidth="80.0" text="Editar" />
         <Button fx:id="excluirButton" layoutX="541.0" layoutY="395.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Excluir" />
-      <Button fx:id="excluirButton1" layoutX="645.0" layoutY="395.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Finalizar" />
+      <Button fx:id="cadastrarButton" layoutX="645.0" layoutY="395.0" mnemonicParsing="false" onAction="#handleCadastrarQuestoes" prefHeight="30.0" prefWidth="80.0" text="Finalizar" />
     </children>
 </AnchorPane>
