Adição das telas de seleção e realização de prova

--- a/src/main/resources/view/AlunoDashboardView.fxml
+++ b/src/main/resources/view/AlunoDashboardView.fxml
@@ -30,7 +30,7 @@
             <children>
                 <HBox spacing="20.0">
                     <children>
-                        <Button fx:id="provaButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="130.0" text="Realizar Prova" />
+                        <Button fx:id="provaButton" mnemonicParsing="false" onAction="#handleRealizarProva" prefHeight="45.0" prefWidth="130.0" text="Realizar Prova" />
                         <Button fx:id="notasButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="130.0" text="Ver Notas" />
                     </children>
                 </HBox>
