--- a/src/main/resources/view/paneAlunoAdm.fxml
+++ b/src/main/resources/view/paneAlunoAdm.fxml
@@ -1,13 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="view.PaneAlunoAdm">
+<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.cadastro.menuAdm.PaneAlunoAdm">
+    <children>
+        <AnchorPane fx:id="contentArea">
+            <children>
+                <AnchorPane layoutY="8.0" prefHeight="24.0" prefWidth="455.0" style="-fx-background-color: #B0C4DE;" AnchorPane.bottomAnchor="326.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="8.0">
+                    <children>
+                        <Label fx:id="titleLabel" alignment="BASELINE_RIGHT" layoutX="214.0" layoutY="4.0" text="Alunos" textAlignment="CENTER" />
+                    </children>
+                </AnchorPane>
+            <TableView layoutX="14.0" layoutY="81.0" prefHeight="262.0" prefWidth="353.0">
+              <columns>
+                <TableColumn prefWidth="75.0" text="Nome" />
+                <TableColumn prefWidth="75.0" text="CPF" />
+                  <TableColumn prefWidth="75.0" text="Email" />
+                  <TableColumn prefWidth="75.0" text="Data de Nascimento" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+            <Button layoutX="388.0" layoutY="256.0" mnemonicParsing="false" text="Editar" />
+            <Button layoutX="378.0" layoutY="212.0" mnemonicParsing="false" text="Adicionar" />
+            <Button layoutX="384.0" layoutY="302.0" mnemonicParsing="false" text="Deletar" />
+            <AnchorPane layoutX="13.0" layoutY="52.0" prefHeight="24.0" prefWidth="353.0" style="-fx-background-color: #C0C0C0;">
+               <children>
+                  <Label layoutX="131.0" layoutY="4.0" text="Lista de Cadastro" textAlignment="CENTER" />
+               </children>
+            </AnchorPane>
+            </children>
+        </AnchorPane>
+    </children>
 
 </AnchorPane>
