--- a/src/main/resources/view/paneUsuarios.fxml
+++ b/src/main/resources/view/paneUsuarios.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.PaneUsuariosAdm">
+<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.PaneUsuarios">
     <children>
         <AnchorPane fx:id="contentArea">
             <children>
