--- a/src/main/resources/view/ProfessorDashboardView.fxml
+++ b/src/main/resources/view/ProfessorDashboardView.fxml
@@ -2,45 +2,60 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #f0f2f5;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ProfessorDashboardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ProfessorDashboardController">
     <children>
-        <Label layoutX="158.0" layoutY="37.0" text="Selecione a opção que deseja">
-            <font>
-                <Font name="System Bold" size="20.0" />
-            </font>
-        </Label>
-
-        <VBox alignment="CENTER" layoutX="40.0" layoutY="138.0" spacing="10.0">
+        <AnchorPane prefHeight="42.0" prefWidth="200.0" style="-fx-background-color: #708090;" AnchorPane.bottomAnchor="358.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+        <VBox alignment="TOP_CENTER" layoutY="42.0" prefHeight="358.0" prefWidth="44.0" spacing="10.0" style="-fx-background-color: White;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="556.0" AnchorPane.topAnchor="42.0">
             <children>
-                <Label text="Professor" textFill="#555555">
-                    <font>
-                        <Font name="System Bold" size="18.0" />
-                    </font>
-                </Label>
-                <Button fx:id="sairButton" mnemonicParsing="false" onAction="#handleSair" prefHeight="30.0" prefWidth="80.0" text="Sair" />
+                <ImageView fitHeight="46.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@imagens/user.png" />
+                    </image>
+                </ImageView>
+                <ImageView fitHeight="46.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@imagens/provas.png" />
+                    </image>
+                </ImageView>
+                <ImageView fitHeight="46.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@imagens/nota.png" />
+                    </image>
+                </ImageView>
+                <ImageView fitHeight="46.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@imagens/relatorio.png" />
+                    </image>
+                </ImageView>
+                <ImageView fitHeight="46.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@imagens/settings.png" />
+                    </image>
+                </ImageView>
             </children>
         </VBox>
-
-        <VBox layoutX="220.0" layoutY="115.0" spacing="20.0">
+        <VBox layoutX="44.0" layoutY="42.0" prefHeight="358.0" prefWidth="99.0" spacing="9.0" style="-fx-background-color: White;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="44.0" AnchorPane.rightAnchor="457.0" AnchorPane.topAnchor="42.0">
             <children>
-                <HBox spacing="20.0">
-                    <children>
-                        <Button fx:id="provaButton" mnemonicParsing="false" onAction="#handelGerenciarProvas" prefHeight="45.0" prefWidth="130.0" text="Provas" />
-                        <Button fx:id="notasButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="130.0" text="Consultar Notas" />
-                    </children>
-                </HBox>
-                <HBox spacing="20.0">
-                    <children>
-                        <Button fx:id="feedbackButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="130.0" text="Relatorios" />
-                        <Button fx:id="notificacoesButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="130.0" text="Notificações" />
-                    </children>
-                </HBox>
+                <Button fx:id="btnUser" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#usuarios" prefHeight="36.0" prefWidth="95.0" text="Usuário" />
+                <Button fx:id="btnProva" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#provas" prefHeight="36.0" prefWidth="95.0" text="Provas" />
+                <Button fx:id="btnNota" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#notas" prefHeight="36.0" prefWidth="95.0" text="Notas" />
+                <Button fx:id="btnRelatorio" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#relatorios" prefHeight="36.0" prefWidth="95.0" text="Relatórios" />
+                <Button fx:id="btnNotificacoes" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#notificacoes" prefHeight="36.0" prefWidth="95.0" text="Notificações" />
             </children>
         </VBox>
+        <AnchorPane fx:id="contentArea" layoutX="144.0" layoutY="41.0" prefHeight="358.0" prefWidth="455.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="144.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="42.0">
+            <children>
+                <AnchorPane layoutY="8.0" prefHeight="24.0" prefWidth="455.0" style="-fx-background-color: #B0C4DE;" AnchorPane.bottomAnchor="326.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="8.0">
+                    <children>
+                        <Label fx:id="titleLabel" alignment="BASELINE_RIGHT" layoutX="214.0" layoutY="4.0" text="Home" textAlignment="CENTER" />
+                    </children>
+                </AnchorPane>
+            </children>
+        </AnchorPane>
     </children>
 </AnchorPane>
