--- a/src/main/resources/view/paneAlunoAdm.fxml
+++ b/src/main/resources/view/paneAlunoAdm.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.cadastro.menuAdm.PaneAlunoAdm">
+<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.PaneAlunoAdm">
     <children>
         <AnchorPane fx:id="contentArea">
             <children>
