--- a/src/main/resources/view/paneUsuarios.fxml
+++ b/src/main/resources/view/paneUsuarios.fxml
@@ -25,7 +25,7 @@
             <Label layoutX="186.0" layoutY="89.0" text="Senha:" />
             <Label layoutX="237.0" layoutY="59.0" text="---" />
             <Label layoutX="237.0" layoutY="89.0" text="---" />
-            <Button layoutX="219.0" layoutY="294.0" mnemonicParsing="false" text="Sair" />
+            <Button layoutX="219.0" layoutY="294.0" mnemonicParsing="false" onAction="#logout" text="Sair" />
             </children>
         </AnchorPane>
     </children>
