--- a/src/main/resources/view/GerenciarProfessoresView.fxml
+++ b/src/main/resources/view/GerenciarProfessoresView.fxml
@@ -5,42 +5,40 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="450.0" prefWidth="750.0" style="-fx-background-color: #f0f2f5;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.GerenciarProfessoresController">
+<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.GerenciarProfessoresController">
     <children>
-        <Label layoutX="225.0" layoutY="28.0" text="Gerenciamento dos Professores">
-            <font>
-                <Font name="System Bold" size="24.0" />
-            </font>
-        </Label>
-        <Button fx:id="voltarButton" layoutX="24.0" layoutY="35.0" mnemonicParsing="false" onAction="#handleVoltar" prefHeight="30.0" prefWidth="80.0" text="Voltar" />
-
-        <TableView fx:id="tabelaProfessores" layoutX="125.0" layoutY="85.0" prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="125.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="85.0">
-            <columns>
-                <TableColumn fx:id="colunaId" prefWidth="40.0" text="Id" />
-                <TableColumn fx:id="colunaNome" prefWidth="120.0" text="Nome" />
-                <TableColumn fx:id="colunaCpf" prefWidth="100.0" text="Cpf" />
-                <TableColumn fx:id="colunaEmail" prefWidth="130.0" text="E-mail" />
-                <TableColumn fx:id="colunaNascimento" prefWidth="110.0" text="Data de nascimento" />
-                <TableColumn fx:id="colunaDisciplina" prefWidth="80.0" text="Disciplina" />
-            </columns>
-        </TableView>
-
-        <VBox alignment="CENTER" layoutX="24.0" layoutY="145.0" spacing="10.0">
+        <AnchorPane fx:id="contentArea">
             <children>
-                <Label text="admin" textFill="#555555">
-                    <font>
-                        <Font name="System Bold" size="18.0" />
-                    </font>
-                </Label>
-                <Button fx:id="sairButton" mnemonicParsing="false" onAction="#handleSair" prefHeight="30.0" prefWidth="80.0" text="Sair" />
+                <AnchorPane layoutY="8.0" prefHeight="24.0" prefWidth="455.0" style="-fx-background-color: #B0C4DE;" AnchorPane.bottomAnchor="326.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="8.0">
+                    <children>
+                        <Label fx:id="titleLabel" alignment="BASELINE_RIGHT" layoutX="155.0" layoutY="4.0" text="Gerenciador de Professores" textAlignment="CENTER" />
+                    </children>
+                </AnchorPane>
+                <TableView fx:id="tabelaProfessores" layoutX="14.0" layoutY="81.0" prefHeight="219.0" prefWidth="427.0">
+                    <columns>
+                        <TableColumn fx:id="colunaNome" prefWidth="75.0" text="Nome" />
+                        <TableColumn fx:id="colunaCpf" prefWidth="75.0" text="CPF" />
+                        <TableColumn fx:id="colunaDisciplina" prefWidth="75.0" text="Disciplina" />
+                        <TableColumn fx:id="colunaId" prefWidth="75.0" text="ID" />
+                        <TableColumn fx:id="colunaEmail" prefWidth="75.0" text="Gmail" />
+                        <TableColumn fx:id="colunaNascimento" prefWidth="75.0" text="Data de Nascimento" />
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                </TableView>
+                <Button layoutX="210.0" layoutY="312.0" mnemonicParsing="false" onAction="#handleEditarProfessor" text="Editar" />
+                <Button layoutX="126.0" layoutY="312.0" mnemonicParsing="false" onAction="#handleNovoProfessor" text="Adicionar" />
+                <Button layoutX="274.0" layoutY="312.0" mnemonicParsing="false" onAction="#handleExcluirProfessor" text="Deletar" />
+                <AnchorPane layoutX="13.0" layoutY="52.0" prefHeight="24.0" prefWidth="427.0" style="-fx-background-color: #C0C0C0;">
+                    <children>
+                        <Label layoutX="168.0" layoutY="4.0" text="Lista de Cadastro" textAlignment="CENTER">
+                        </Label>
+                    </children>
+                </AnchorPane>
             </children>
-        </VBox>
-
-        <Button fx:id="novoButton" layoutX="470.0" layoutY="401.0" mnemonicParsing="false" onAction="#handleNovoProfessor" prefHeight="30.0" prefWidth="80.0" text="Novo" />
-        <Button fx:id="editarButton" layoutX="560.0" layoutY="401.0" mnemonicParsing="false" onAction="#handleEditarProfessor" prefHeight="30.0" prefWidth="80.0" text="Editar" />
-        <Button fx:id="excluirButton" layoutX="650.0" layoutY="401.0" mnemonicParsing="false" onAction="#handleExcluirProfessor" prefHeight="30.0" prefWidth="80.0" text="Excluir" />
+        </AnchorPane>
     </children>
+
 </AnchorPane>
