--- a/src/main/resources/view/GerenciarProvasView.fxml
+++ b/src/main/resources/view/GerenciarProvasView.fxml
@@ -5,42 +5,34 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="450.0" prefWidth="750.0" style="-fx-background-color: #f0f2f5;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.GerenciarProvasController">
+<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.GerenciarProvasController">
     <children>
-        <Label layoutX="270.0" layoutY="35.0" text="Gerenciamento dos Provas">
-            <font>
-                <Font name="System Bold" size="24.0" />
-            </font>
-        </Label>
-        <Button fx:id="voltarButton" layoutX="24.0" layoutY="35.0" mnemonicParsing="false" onAction="#handleVoltar" prefHeight="30.0" prefWidth="80.0" text="Voltar" />
-
-        <TableView fx:id="tabelaProvas" layoutX="125.0" layoutY="85.0" prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="125.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="85.0">
-            <columns>
-                <TableColumn fx:id="colunaId" prefWidth="40.0" text="Id" />
-                <TableColumn fx:id="colunaCpf" prefWidth="294.0" text="Titulo" />
-                <TableColumn fx:id="colunaEmail" prefWidth="147.0" text="Data" />
-                <TableColumn fx:id="colunaNascimento" minWidth="0.0" prefWidth="114.0" text="Tipo" />
-            </columns>
-        </TableView>
-
-        <VBox alignment="CENTER" layoutX="24.0" layoutY="145.0" spacing="10.0">
+        <AnchorPane fx:id="contentArea">
             <children>
-                <Label text="Professor" textFill="#555555">
-                    <font>
-                        <Font name="System Bold" size="18.0" />
-                    </font>
-                </Label>
-                <Button fx:id="sairButton" mnemonicParsing="false" onAction="#handleSair" prefHeight="30.0" prefWidth="80.0" text="Sair" />
+                <AnchorPane layoutY="8.0" prefHeight="24.0" prefWidth="455.0" style="-fx-background-color: #B0C4DE;" AnchorPane.bottomAnchor="326.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="8.0">
+                    <children>
+                        <Label fx:id="titleLabel" alignment="BASELINE_RIGHT" layoutX="168.0" layoutY="4.0" text="Gerenciador de Provas" textAlignment="CENTER" />
+                    </children>
+                </AnchorPane>
+                <TableView fx:id="tabelaProfessores" layoutX="14.0" layoutY="43.0" prefHeight="257.0" prefWidth="427.0">
+                    <columns>
+                        <TableColumn prefWidth="75.0" text="ID" />
+                        <TableColumn prefWidth="75.0" text="Título" />
+                        <TableColumn prefWidth="75.0" text="Data" />
+                        <TableColumn prefWidth="75.0" text="Tipo" />
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                </TableView>
+                <Button layoutX="278.0" layoutY="312.0" mnemonicParsing="false" onAction="#handleEditarProva" text="Editar" />
+                <Button layoutX="57.0" layoutY="312.0" mnemonicParsing="false" onAction="#handleNovaProva" text="Adicionar" />
+                <Button layoutX="337.0" layoutY="312.0" mnemonicParsing="false" onAction="#handleExcluirProva" text="Deletar" />
+            <Button layoutX="140.0" layoutY="312.0" mnemonicParsing="false" onAction="#handleEnviarProva" text="Enviar" />
+            <Button layoutX="203.0" layoutY="312.0" mnemonicParsing="false" text="Detalhes" />
             </children>
-        </VBox>
-
-        <Button fx:id="novoButton" layoutX="125.0" layoutY="395.0" mnemonicParsing="false" onAction="#handleNovaProva" prefHeight="30.0" prefWidth="80.0" text="Novo" />
-        <Button fx:id="editarButton" layoutX="413.0" layoutY="395.0" mnemonicParsing="false" onAction="#handleEditarProva" prefHeight="30.0" prefWidth="80.0" text="Editar" />
-        <Button fx:id="excluirButton" layoutX="501.0" layoutY="395.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Excluir" />
-      <Button fx:id="enviarButton" layoutX="224.0" layoutY="395.0" mnemonicParsing="false" onAction="#handleEnviarProva" prefHeight="30.0" prefWidth="80.0" text="Enviar" />
-      <Button fx:id="novoButton11" layoutX="319.0" layoutY="395.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Detalhes" />
+        </AnchorPane>
     </children>
+
 </AnchorPane>
