--- a/src/main/resources/view/GerenciarRelatoriosView.fxml
+++ b/src/main/resources/view/GerenciarRelatoriosView.fxml
@@ -3,43 +3,29 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #f0f2f5;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.GerenciarRelatoriosController">
-    <children>
-        <Label layoutX="158.0" layoutY="37.0" text="Gerenciamento de Relatórios">
-            <font>
-                <Font name="System Bold" size="20.0" />
-            </font>
-        </Label>
+<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.GerenciarRelatoriosController">
 
-        <VBox alignment="CENTER" layoutX="40.0" layoutY="138.0" spacing="10.0">
-            <children>
-                <Label text="admin" textFill="#555555">
-                    <font>
-                        <Font name="System Bold" size="18.0" />
-                    </font>
-                </Label>
-                <Button fx:id="sairButton" mnemonicParsing="false" onAction="#handleSair" prefHeight="30.0" prefWidth="80.0" text="Sair" />
-            </children>
-        </VBox>
+    <AnchorPane fx:id="contentArea">
+        <children>
+            <AnchorPane layoutY="8.0" prefHeight="24.0" prefWidth="455.0" style="-fx-background-color: #B0C4DE;" AnchorPane.bottomAnchor="326.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="8.0">
+                <children>
+                    <Label fx:id="titleLabel" alignment="BASELINE_RIGHT" layoutX="201.0" layoutY="4.0" text="Relatórios" textAlignment="CENTER" />
+                </children>
+            </AnchorPane>
+            <AnchorPane layoutY="75.0" prefHeight="24.0" prefWidth="455.0" style="-fx-background-color: #C0C0C0;">
+                <children>
+                    <Label layoutX="138.0" layoutY="2.0" text="Gerenciamento de Relatórios">
+                        <font>
+                            <Font size="14.0" />
+                        </font>
+                    </Label>
+                </children>
+            </AnchorPane>
+            <Button layoutX="74.0" layoutY="155.0" mnemonicParsing="false" text="Relatório por Disciplina" />
+            <Button layoutX="253.0" layoutY="155.0" mnemonicParsing="false" text="Relatório Completo" />
+        </children>
+    </AnchorPane>
 
-        <VBox layoutX="300.0" layoutY="114.0" spacing="20.0">
-            <children>
-                <HBox spacing="20.0">
-                    <children>
-                        <Button fx:id="disciplinasButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="162.0" text="Relatório das disciplinas" />
-                    </children>
-                </HBox>
-                <HBox spacing="20.0">
-                    <children>
-                        <Button fx:id="completoButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="165.0" text="Relatório completo" />
-                    </children>
-                </HBox>
-            </children>
-        </VBox>
-      <Button fx:id="voltarButton" layoutX="40.0" layoutY="34.0" mnemonicParsing="false" onAction="#handleVoltar" prefHeight="30.0" prefWidth="80.0" text="Voltar" />
-    </children>
 </AnchorPane>
