--- a/src/main/resources/view/GerenciarUsuariosView.fxml
+++ b/src/main/resources/view/GerenciarUsuariosView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.PaneUsuarios">
+<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.GerenciarUsuariosController">
     <children>
         <AnchorPane fx:id="contentArea">
             <children>
@@ -25,7 +25,7 @@
             <Label layoutX="186.0" layoutY="89.0" text="Senha:" />
             <Label layoutX="237.0" layoutY="59.0" text="---" />
             <Label layoutX="237.0" layoutY="89.0" text="---" />
-            <Button layoutX="219.0" layoutY="294.0" mnemonicParsing="false" text="Sair" />
+            <Button fx:id="btnSair" layoutX="219.0" layoutY="294.0" mnemonicParsing="false" onAction="#handleSair" text="Sair" />
             </children>
         </AnchorPane>
     </children>
