--- a/src/main/resources/view/cadastro/cadastroTurma.fxml
+++ b/src/main/resources/view/cadastro/cadastroTurma.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="233.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.cadastro.CadastroTurmaController">
    <children>
@@ -13,13 +13,10 @@
             <Label layoutX="135.0" layoutY="4.0" text="Nova Turma" />
          </children>
       </AnchorPane>
-      <Label layoutX="14.0" layoutY="65.0" text="Nome da Turma:" />
-      <Label layoutX="14.0" layoutY="107.0" text="Professor:" />
-      <Label layoutX="14.0" layoutY="143.0" text="ID da Turma:" />
-      <TextField fx:id="campoNome" layoutX="112.0" layoutY="61.0" />
-      <TextField fx:id="campoProfessor" layoutX="112.0" layoutY="103.0" />
-      <TextField fx:id="campoId" layoutX="112.0" layoutY="139.0" />
+      <Label layoutX="9.0" layoutY="108.0" text="Nome da Turma:" />
+      <TextField fx:id="campoNome" layoutX="114.0" layoutY="104.0" />
       <Button layoutX="22.0" layoutY="194.0" mnemonicParsing="false" onAction="#handleCancelar" text="Cancelar" />
       <Button layoutX="249.0" layoutY="194.0" mnemonicParsing="false" onAction="#handleCadastrar" text="Cadastrar" />
+      <Text fx:id="messageText" layoutX="156.0" layoutY="179.0" strokeType="OUTSIDE" strokeWidth="0.0" />
    </children>
 </AnchorPane>
